--- a/data/sections/about.yaml
+++ b/data/sections/about.yaml
@@ -9,7 +9,7 @@ section:
 designation: Business Intillgence | Data Visualization Engineer
 # your company information
 company:
-  name: Design-Alytics
+  name: 
   url: "https://www.example.com"
 
 # your resume. this file path should be relative to you "static" directory
