--- a/data/sections/achievements.yaml
+++ b/data/sections/achievements.yaml
@@ -9,15 +9,15 @@ section:
 
 # Your achievements achievements
 achievements:
-- title: Best Presenter
-  image: images/achievements/presenter.jpg
-  summary: Best presenter in the 2020 XYZ conference.
-- title: Champion
-  image: images/achievements/sport.jpg
-  summary: Champion in cycling inter-city cycling championship 2020.
+- title: Golden Stick Award
+  image: images/achievements/goldenstick.jpg
+  summary: Highest overall grade point average during advanced jets training
+- title: MBA Graduation
+  image: images/achievements/thesis.jpg
+  summary: Recipient of the Outstanding Thesis Award (MBA Program)
+- title: Retirement
+  image: images/achievements/retirement.jpg
+  summary: Retired from the United States Marine Corps after 21 years of service, Recipient of the Meritorious Service Medal (MSM)
 - title: Graduation
-  image: images/achievements/graduation-cap.jpg
-  summary: Received Bachelor of Science (B.Sc.) in Computer Science and Engineer from XYZ University.
-- title: Award Winner
-  image: images/achievements/woman-winner.jpg
-  summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus architecto minus facere vero?
+  image: images/achievements/bachelors.jpg
+  summary: Graduated with my bachelors degree in 2005
